[project]
name = "leetcode-record"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "binghuis", email = "soongbinghui@gmail.com" }]
dependencies = ["jupyterlab>=4.2.0"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "jupyter lab"
